# tunaSalon

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  Cargo.toml  HISTORY.ko.md  HISTORY.md  README.ko.md  README.md
docs/: agentSessionHistory.md
docs/agents/: architect.md  developer.md  reviewer.md
docs/plans/: index.md  salon-chat-topics.md  salon-debate-phases.md  salon-debate-producer.md  salon-engine-v1-task-01.md  salon-engine-v1-task-02.md  salon-engine-v1-task-03.md  salon-engine-v1-task-04.md  salon-engine-v1-task-05.md  salon-engine-v1-task-06.md  salon-engine-v1-task-07.md  salon-engine-v1-task-08.md  salon-engine-v1.md  salon-engine-v10-task-47.md  salon-engine-v10-task-48.md  salon-engine-v10-task-49.md  salon-engine-v10.md  salon-engine-v2-task-09.md  salon-engine-v2-task-10.md  salon-engine-v2-task-11.md  salon-engine-v2-task-12.md  salon-engine-v2-task-13.md  salon-engine-v2-task-14.md  salon-engine-v2.md  salon-engine-v3-task-15.md  salon-engine-v3-task-16.md  salon-engine-v3-task-17.md  salon-engine-v3-task-18.md  salon-engine-v3-task-20.md  salon-engine-v3.md  salon-engine-v4-task-21.md  salon-engine-v4-task-22.md  salon-engine-v4-task-23.md  salon-engine-v4-task-24.md  salon-engine-v4-task-25.md  salon-engine-v4-task-26.md  salon-engine-v4-task-27.md  salon-engine-v4.md  salon-engine-v5-task-28.md  salon-engine-v5-task-29.md  (+26 more)
docs/prompts/: index.md  refactoring-review-prompt.md
docs/reference/: development-guardrails.md  index.md  refactoring-review-2026-06-27-web.md  refactoring-review-v9-snapshot.md  salon-engine-design.md
docs/temp/: next-session-prompt.md  salon-context-prompt.md  salon-memory-engine-idea.md  salon-persona-fragments.md  salon-persona-ui.md  salon-plan-v1.md  salon-recall-eval-harness.md  salon-web-ui-kimi-prompt.md
examples/: chat_demo.rs  mixed_bench.rs  persona_collapse.rs  tui_preview.rs
src/: ann.rs  chat.rs  driver.rs  embed.rs  flow.rs  gate.rs  hawkes.rs  headless.rs  human.rs  lib.rs  live.rs  lobby_topics.rs  locale.rs  main.rs  memory.rs  meta.rs  model.rs  ollama.rs  openai.rs  persona_kit.rs  pool.rs  preset.rs  roomstore.rs  rrf.rs  runtime.rs  semaphore.rs  session_bus.rs  sink.rs  sweep.rs  tokenize_ko.rs  tui.rs  utterance.rs  web.rs
src/debate/: directive.rs  evidence.rs  format.rs  mod.rs  phase.rs  plan.rs  report.rs  text.rs
src/memory/: sqlite_impl.rs
src/web/: dto.rs
tests/: recall_eval.rs  smoke.rs  smoke_chat.rs  smoke_v10.rs  smoke_v2.rs  smoke_v3.rs  smoke_v4.rs  smoke_v5.rs  smoke_v6.rs  smoke_v7.rs  smoke_v8.rs  smoke_v9.rs
web/: .gitignore  README.md  index.html  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/components/: ArchivePage.tsx  AxisSelect.tsx  ChatArea.tsx  Composer.tsx  CreateRoomDialog.tsx  Header.tsx  HumanProfileDialog.tsx  InvitePanel.tsx  LambdaGauge.tsx  ModelSettingsDialog.tsx  PersonaPresence.tsx  ReportMarkdown.tsx  RichText.tsx  ShareView.tsx  SidePanel.tsx  ThreeBackground.tsx
web/src/hooks/: useChat.ts
web/src/lib/: indianName.ts  mockEngine.ts  models.ts  personaAvatar.tsx  personaAxes.ts  personaDescription.ts  personaLabels.ts  realEngine.ts
web/src/types/: index.ts
