[package]
name = "salon"
version = "0.1.0"
edition = "2021"

[features]
friend-engine = ["dep:lindera", "dep:rusqlite"]

[dependencies]
crossterm = "0.29.0"
dotenvy = "0.15.7"
lindera = { version = "2.3.4", features = ["embed-ko-dic"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
rand = "0.8"
rand_chacha = "0.3"
ratatui = "0.30.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"

[lib]
name = "salon"
path = "src/lib.rs"

[[bin]]
name = "salon"
path = "src/main.rs"
