[package]
name = "salon"
version = "0.1.0"
edition = "2021"

[features]
morphology = ["dep:lindera"]
friend-engine = ["morphology", "dep:rusqlite"]
friend-engine-semantic = ["friend-engine", "dep:ort", "dep:ndarray", "dep:tokenizers", "dep:usearch"]
coreml = ["ort/coreml"]
web = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:futures-util", "dep:rusqlite", "morphology"]

[dependencies]
axum = { version = "0.8", features = ["ws"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"], optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
futures-util = { version = "0.3", optional = true }
crossterm = "0.29.0"
dotenvy = "0.15.7"
lindera = { version = "2.3.4", features = ["embed-ko-dic"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
ort = { version = "=2.0.0-rc.10", features = ["download-binaries", "ndarray"], optional = true }
ndarray = { version = "0.16", optional = true }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"], optional = true }
usearch = { version = "2", optional = true }
rand = "0.8"
rand_chacha = "0.3"
ratatui = "0.30.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
tempfile = "3"

[lib]
name = "salon"
path = "src/lib.rs"

[[bin]]
name = "salon"
path = "src/main.rs"
